--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,6 +22,8 @@
 	font-weight: bold;
   font-display: swap;
 }
+
+// helpers
 .unactive {
   color: #D0D0D0;
 }
@@ -35,6 +37,8 @@
   filter: grayscale(100%);
   transition: 1s;
 }
+
+// main
 html {
   font-family: 'Roboto';
   font-size: 24px;
@@ -48,35 +52,86 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  @media screen and (max-width: 900px)  {
+    line-height: 1.2 !important;
+  }
 }
-header {
+
+.header {
   margin: 15px;
   display: flex;
   justify-content: center;
   font-size: 18px;
+
+  &__button {
+    height: 38px;
+    padding: 5px;
+    width: 150px;
+    margin-right: 10px;
+    border-radius: 10px;
+    background-color: #f9f2ea;
+    border-width: 1px;
+    @media screen and (max-width: 420px) {
+      height: 20%;
+    }
+  }
+
+  &__button:hover {
+    background-color: #faebdc;
+  }
+
+  &__button:active {
+    border-width: 2px;
+  }
 }
-.header__button, .footer__button {
-  height: 38px;
-  padding: 5px;
-  width: 150px;
-  margin-right: 10px;
-  border-radius: 10px;
-  background-color: #f9f2ea;
-  border-width: 1px;
+
+.footer {
+  width: 95vw;
+  height: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  &__button {
+    height: 24px;
+    padding: 0;
+    font-size: 16px;
+    text-transform: uppercase;
+  }
+
+  &__button {
+    height: 38px;
+    padding: 5px;
+    width: 150px;
+    margin-right: 10px;
+    border-radius: 10px;
+    background-color: #f9f2ea;
+    border-width: 1px;
+  }
+
+  &__button:hover {
+    background-color: #faebdc;
+  }
+
+  &__button:active {
+    border-width: 2px;
+  }
 }
-.header__button:hover, .footer__button:hover {
-  background-color: #faebdc;
+.total-timer {
+  margin-left: 30px;
 }
-.header__button:active, .footer__button:active {
-  border-width: 2px;
-}
+
 #select_timeRemaining, #select_addingTime, #select_playersNumber {
   width: 150px;
   margin-right: 10px;
   padding: 5px;
   border-radius: 10px;
   text-align: center;
+  @media screen and (max-width: 420px)  {
+    width: 20%;
 }
+}
+
 main {
   width: 95vw;
   height: calc(100vh - 68px - 44px);
@@ -86,46 +141,66 @@ main {
   background-color: #f9f2ea;
   border-radius: 20px;
   margin: 0 20px 0 20px;
+  @media screen and (max-width: 900px)  {
+    width: 100vw;
+  }
+  @media screen and (max-width:  420px)  {
+    flex-direction: column;
+  }
 }
+
 .player {
   width: 23%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.player__image {
-  width: 100%;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: 3px 2px 10px;
-}
-.player__input {
+
   height: 50px;
   width: 100%;
   padding: 5px;
   border-radius: 5px;
   text-align: center;
   text-transform: uppercase;
+  @media screen and (max-width: 420px) {
+    width: 50%;
+  }
+
+  &__input {
+    height: 50px;
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    @media screen and (max-width: 900px)  {
+      margin-bottom: 5px;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 3px 2px 10px;
+    @media screen and (max-width: 900px)  {
+      margin-bottom: 5px;
+    }
+    @media screen and (max-width: 420px)  {
+      margin-bottom: 5px;
+    }
+  }
+
+  &__label {
+    font-size: 36px;
+    @media screen and (max-width: 900px)  {
+      font-size: 32px;
+    }
+    @media screen and (max-width: 420px)  {
+      display: none;
+    }
+  }
 }
-.player__label {
-  font-size: 36px;
-}
-footer {
-  width: 95vw;
-  height: 24px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.total-timer {
-  margin-left: 30px;
-}
-.footer__button {
-  height: 24px;
-  padding: 0;
-  font-size: 16px;
-  text-transform: uppercase;
-}
+
 .popup {
   display: none;
   position: fixed;
@@ -142,63 +217,29 @@ footer {
   border: solid 2px orange;
   animation: disappearance 1s;
   animation-iteration-count: 1;
-}
-.popup-active {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: disappearance 1s;
-}
-@keyframes disappearance {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@media screen and (max-width: 900px)  {
-  body {
-    line-height: 1.2 !important;
-  }
-  main {
-    width: 100vw;
-  }
-  .player__image {
-    margin-bottom: 5px;
-  }
-  .player__label {
-    font-size: 32px;
-  }
-  .popup {
+  @media screen and (max-width: 900px)  {
     height: 50vh;
     width: 50vw;
     font-size: 30px;
   }
-}
-@media screen and (max-width: 420px)  {
-  main {
-    flex-direction: column;
-  }
-  .player__label {
-    font-size: 24px;
-  }
-  .player {
-    width: 50%;
-  }
-  .header__button {
-    height: 20%;
-  }
-  #select_timeRemaining, #select_addingTime, #select_playersNumber {
-    width: 20%;
-  }
-  .popup {
+  @media screen and (max-width: 420px)  {
     height: 30vh;
     width: 90vw;
     font-size: 24px;
   }
-  .player__image {
-    display: none;
+
+  &-active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: disappearance 1s;
+  }
+  @keyframes disappearance {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
