--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,27 +1,46 @@
+// @font-face {
+//   font-family: 'Roboto';
+//   src: local('Roboto'), url('../assets/fonts/Roboto-Regular.woff2') format('woff2'),
+//   url('../assets/fonts/Roboto-Regular.woff') format('woff');
+// 	font-style: normal;
+// 	font-weight: normal;
+//   font-display: swap;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: local('Roboto'), url('../assets/fonts/Roboto-Italic.woff2') format('woff2'),
+//   url('../assets/fonts/Roboto-Italic.woff') format('woff');
+// 	font-style: italic;
+// 	font-weight: normal;
+//   font-display: swap;
+// }
+// @font-face {
+//   font-family: 'Roboto';
+//   src: local('Roboto'), url('../assets/fonts/Roboto-Bold.woff2') format('woff2'),
+//   url('../assets/fonts/Roboto-Bold.woff') format('woff');
+// 	font-style: normal;
+// 	font-weight: bold;
+//   font-display: swap;
+// }
+
 @font-face {
-  font-family: 'Roboto';
-  src: local('Roboto'), url('../assets/fonts/Roboto-Regular.woff2') format('woff2'),
-  url('../assets/fonts/Roboto-Regular.woff') format('woff');
+  font-family: 'Helvetica';
+  src: local('Helvetica'), url('../assets/fonts/Helvetica-Medium.woff2') format('woff2'),
+  url('../assets/fonts/Helvetica-Medium.woff') format('woff');
 	font-style: normal;
 	font-weight: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Roboto';
-  src: local('Roboto'), url('../assets/fonts/Roboto-Italic.woff2') format('woff2'),
-  url('../assets/fonts/Roboto-Italic.woff') format('woff');
+  font-family: 'Helvetica';
+  src: local('Helvetica'), url('../assets/fonts/Helvetica-Bold.woff2') format('woff2'),
+  url('../assets/fonts/Helvetica-Bold.woff') format('woff');
 	font-style: italic;
 	font-weight: normal;
   font-display: swap;
 }
-@font-face {
-  font-family: 'Roboto';
-  src: local('Roboto'), url('../assets/fonts/Roboto-Bold.woff2') format('woff2'),
-  url('../assets/fonts/Roboto-Bold.woff') format('woff');
-	font-style: normal;
-	font-weight: bold;
-  font-display: swap;
-}
+
+
 
 // helpers
 .unactive {
@@ -40,13 +59,14 @@
 .row {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 // main
 html {
-  font-family: 'Roboto';
-  font-size: 24px;
+  font-family: 'Helvetica';
+  font-size: 16px;
 }
 body {
   position: relative;
@@ -66,27 +86,31 @@ header {
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  @media screen and (min-width: 1024px) {
-    width: 1024px;
-  }
+  // @media screen and (min-width: 1024px) {
+  //   width: 1024px;
+  // }
 }
 .header {
+  width: 420px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  // @media screen and (min-width: 1024px) {
+  //   width: 1024px;
+  // }
 }
 .header-init {
   margin: 15px;
   display: flex;
   justify-content: center;
-  font-size: 18px;
+  // font-size: 18px;
 
 
   &__button {
     height: 38px;
     padding: 5px;
-    width: 150px;
-    margin-right: 10px;
+    width: 200px;
+    // margin-right: 10px;
     border-radius: 10px;
     background-color: #f9f2ea;
     border-width: 1px;
@@ -120,15 +144,15 @@ header {
   &__button {
     height: 24px;
     padding: 0;
-    font-size: 16px;
+    // font-size: 16px;
     text-transform: uppercase;
   }
 
   &__button {
     height: 38px;
     padding: 5px;
-    width: 150px;
-    margin-right: 10px;
+    width: 200px;
+    // margin-right: 10px;
     border-radius: 10px;
     background-color: #f9f2ea;
     border-width: 1px;
@@ -142,14 +166,21 @@ header {
     border-width: 2px;
   }
 }
-.total-timer {
-  margin-left: 30px;
+.total-timer, .round_counter {
+  width: 200px;
+  height: 36px;
+  border: solid #000 1px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // margin-left: 30px;
 }
 
 #select_timeRemaining, #select_addingTime, #select_playersNumber {
-  width: 150px;
+  width: 200px;
   height: 38px;
-  margin-right: 10px;
+  // margin-right: 10px;
   padding: 5px;
   border-radius: 10px;
   text-align: center;
@@ -182,7 +213,8 @@ main {
   align-items: center;
 
   height: 50px;
-  width: 100%;
+  // width: 100%;
+  width: 50%;
   padding: 5px;
   border-radius: 5px;
   text-align: center;
@@ -217,9 +249,9 @@ main {
   }
 
   &__label {
-    font-size: 36px;
+    // font-size: 36px;
     @media screen and (max-width: 900px)  {
-      font-size: 32px;
+      // font-size: 32px;
     }
     @media screen and (max-width: 420px)  {
       display: none;
@@ -235,7 +267,7 @@ main {
   transform: translate(-50%, -50%);
   height: 30vh;
   width: 30vw;
-  font-size: 36px;
+  // font-size: 36px;
   font-weight: 800;
   text-align: center;
   color: green;
@@ -246,12 +278,12 @@ main {
   @media screen and (max-width: 900px)  {
     height: 50vh;
     width: 50vw;
-    font-size: 30px;
+    // font-size: 30px;
   }
   @media screen and (max-width: 420px)  {
     height: 30vh;
     width: 90vw;
-    font-size: 24px;
+    // font-size: 24px;
   }
 
   &-active {
