--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,8 @@
 // Variables
-$main_color: #f9f2ea;
-$hover_color: #faebdc;
+$main_color: #e5f8e4;
+$hover_color: #d5ffd2;
+$time_color: #efe2ff;
+$time_score: #d3f4ff;
 
 // Fonts
 @font-face {
@@ -132,6 +134,7 @@ main {
   &__side {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 50%;
   }
 }
@@ -140,21 +143,19 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   border-radius: 5px;
   text-align: center;
   text-transform: uppercase;
-  @media screen and (max-width: 420px) {
-    // width: 50%;
-  }
 
   &__input {
-    // padding: 5px;
     border-radius: 5px;
     text-align: center;
     text-transform: uppercase;
-    @media screen and (max-width: 900px)  {
-      margin-bottom: 5px;
+    border: none;
+    &:invalid {
+      border: 1px solid;
     }
   }
 
@@ -163,22 +164,49 @@ main {
     margin-bottom: 20px;
     border-radius: 10px;
     box-shadow: 3px 2px 10px;
-    @media screen and (max-width: 900px)  {
-      margin-bottom: 5px;
-    }
-    @media screen and (max-width: 420px)  {
-      margin-bottom: 5px;
-    }
   }
 
   &__label {
-    // font-size: 36px;
-    @media screen and (max-width: 900px)  {
-      // font-size: 32px;
-    }
-    @media screen and (max-width: 420px)  {
-      display: none;
-    }
+  }
+
+  &__time-remaining {
+    position: absolute;
+    bottom: 10px;
+    left: 15px;
+    padding: 5px;
+    background-color: $time_color;
+    border-radius: 5px;
+  }
+  &__score {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 5px;
+    background-color: $time_score;
+    border-radius: 5px;
+  }
+}
+
+.score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+
+  &__input {
+    width: 45px;
+    height: 45px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 20px;
+  }
+  &__select {
+    width: 90px;
+  }
+  &__button {
+    height: 76px;
+    margin-top: 20px;
+    font-size: 24px;
   }
 }
 
@@ -198,16 +226,6 @@ main {
   border: solid 2px orange;
   animation: disappearance 1s;
   animation-iteration-count: 1;
-  @media screen and (max-width: 900px)  {
-    height: 50vh;
-    width: 50vw;
-    // font-size: 30px;
-  }
-  @media screen and (max-width: 420px)  {
-    height: 30vh;
-    width: 90vw;
-    // font-size: 24px;
-  }
 
   &-active {
     display: flex;
