--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,9 @@
 // Variables
-$main_color: #e5f8e4;
-$hover_color: #d5ffd2;
-$time_color: #efe2ff;
-$time_score: #d3f4ff;
+$main-color: #F7F7F7;
+$hover-color: #E9E9E9;
+$name-color: #e9e9e994;
+$time-color: #d3f4ff;
+$score-color: #d3fff8;
 
 // Fonts
 @font-face {
@@ -18,7 +19,7 @@ $time_score: #d3f4ff;
   src: local('Helvetica'), url('../assets/fonts/Helvetica-Bold.woff2') format('woff2'),
   url('../assets/fonts/Helvetica-Bold.woff') format('woff');
 	font-style: italic;
-	font-weight: normal;
+	font-weight: bold;
   font-display: swap;
 }
 
@@ -42,10 +43,11 @@ $time_score: #d3f4ff;
 
 .row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   margin-bottom: 5px;
 }
+
 
 // Main
 html {
@@ -60,6 +62,7 @@ body {
 	padding: 0;
 }
 
+// Меню настроек
 header {
   display: flex;
   flex-direction: column;
@@ -76,26 +79,27 @@ header {
 
   &__button {
     height: 38px;
-    width: 200px;
+    width: 180px;
+    margin-right: 10px;
     border: solid 1px;
     border-radius: 10px;
-    background-color: $main_color;
+    border-color: $hover-color;
+    background-color: $main-color;
     text-transform: uppercase;
     &:hover {
-      background-color: $hover_color;
+      background-color: $hover-color;
       cursor: pointer;
-    }
-    &:active {
-      border: solid 2px;
     }
   }
 
   &__select {
-    width: 200px;
+    width: 180px;
     height: 38px;
+    margin-right: 10px;
     padding: 5px;
     border: solid 1px;
     border-radius: 10px;
+    border-color: $hover-color;
     text-align: center;
     &:hover {
       background-color: $hover_color;
@@ -116,26 +120,26 @@ header {
   }
 }
 
+// Основная часть
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 5px;
+  padding-top: 10px;
   border-top: solid 2px $hover_color;
 }
 
 .main {
   &-wrapper {
     display: flex;
-    justify-content: center;
     align-items: start;
-    width: 420px;
+    width: 400px;
   }
   &__side {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    margin: 0 0 0 10px;
   }
 }
 
@@ -144,68 +148,87 @@ main {
   flex-direction: column;
   align-items: center;
   position: relative;
-
-  border-radius: 5px;
+  font-size: 14px;
   text-align: center;
   text-transform: uppercase;
 
   &__input {
+    position: absolute;
+    width: 80%;
+    top: -5px;
     border-radius: 5px;
     text-align: center;
     text-transform: uppercase;
+    font-weight: bold;
     border: none;
+    background-color: $name-color;
     &:invalid {
       border: 1px solid;
+      background-color: none;
     }
   }
 
   &__image {
-    width: 120px;
+    width: 100px;
     margin-bottom: 20px;
     border-radius: 10px;
     box-shadow: 3px 2px 10px;
   }
 
-  &__label {
+  &__icon {
+    position: absolute;
+    padding: 3px 5px;
+    border-radius: 5px;
+    &:empty {
+      display: none;
+    }
   }
 
   &__time-remaining {
-    position: absolute;
     bottom: 10px;
-    left: 15px;
-    padding: 5px;
-    background-color: $time_color;
-    border-radius: 5px;
+    left: -10px;
+    background-color: $time-color;
   }
   &__score {
-    position: absolute;
     bottom: 10px;
-    right: 10px;
-    padding: 5px;
-    background-color: $time_score;
-    border-radius: 5px;
+    right: -10px;
+    background-color: $score-color;
   }
 }
 
 .score {
+  width: 280px;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+  margin: 10px 0 20px;
 
-  &__input {
+  &__multiply {
     width: 45px;
     height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    border: solid 1px;
     border-radius: 10px;
+    border-color: $hover-color;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
   }
   &__select {
-    width: 90px;
+    width: 180px;
+    height: 45px;
+    border-radius: 10px;
+    border-color: $hover-color;
+    text-align: center;
+    font-size: 16px;
   }
   &__button {
-    height: 76px;
-    margin-top: 20px;
+    width: 235px;
+    height: 115px;
+    margin: 20px 0 0 0;
     font-size: 24px;
   }
 }
@@ -218,7 +241,6 @@ main {
   transform: translate(-50%, -50%);
   height: 30vh;
   width: 30vw;
-  // font-size: 36px;
   font-weight: 800;
   text-align: center;
   color: green;
