001 | Initial layout | HTML and CSS

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,13 @@ $score-color: #d3fff8;
   font-display: swap;
 }
 
+// Запрет на приближение в iPhone
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus, textarea:focus, input:focus {
+          font-size: 16px;
+      }
+  }
+
 // Helpers
 .unactive {
   color: #D0D0D0;
@@ -125,7 +132,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 30px;
   border-top: solid 2px $hover_color;
 }
 
@@ -155,7 +162,7 @@ main {
   &__input {
     position: absolute;
     width: 80%;
-    top: -5px;
+    bottom: 24px;
     border-radius: 5px;
     text-align: center;
     text-transform: uppercase;
@@ -185,12 +192,12 @@ main {
   }
 
   &__time-remaining {
-    bottom: 10px;
+    top: -10px;
     left: -10px;
     background-color: $time-color;
   }
   &__score {
-    bottom: 10px;
+    top: -10px;
     right: -10px;
     background-color: $score-color;
   }
@@ -202,11 +209,11 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 10px 0 20px;
+  margin: 0 0 30px;
 
   &__multiply {
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -218,8 +225,8 @@ main {
     font-size: 16px;
   }
   &__select {
-    width: 180px;
-    height: 45px;
+    width: 170px;
+    height: 50px;
     border-radius: 10px;
     border-color: $hover-color;
     text-align: center;
@@ -227,7 +234,7 @@ main {
   }
   &__button {
     width: 235px;
-    height: 115px;
+    height: 135px;
     margin: 20px 0 0 0;
     font-size: 24px;
   }
