--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,12 @@ $score-color: #d3fff8;
   }
 
 // Helpers
+select {
+  display: block;	
+  text-align: center;
+  text-align-last: center;
+}
+
 .unactive {
   color: #D0D0D0;
 }
