--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -113,6 +113,7 @@ header {
     border: solid 1px;
     border-radius: 10px;
     border-color: $hover-color;
+    background-color: $main-color;
     text-align: center;
     &:hover {
       background-color: $hover_color;
@@ -121,13 +122,15 @@ header {
   }
 
   &__indicator {
-    width: 200px;
+    width: 180px;
     height: 36px;
+    margin-right: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: solid #000 1px;
     border-radius: 10px;
+    border-color: $hover-color;
     font-size: 14px;
     font-weight: 400;
   }
@@ -227,22 +230,35 @@ main {
     border: solid 1px;
     border-radius: 10px;
     border-color: $hover-color;
+    background-color: $main-color;
     text-align: center;
     font-size: 16px;
+    &:hover {
+      cursor: pointer;
+    }
   }
   &__select {
     width: 170px;
     height: 50px;
     border-radius: 10px;
     border-color: $hover-color;
+    background-color: $main-color;
     text-align: center;
     font-size: 16px;
+    &:hover {
+      background-color: $hover_color;
+      cursor: pointer;
+    }
   }
   &__button {
     width: 235px;
     height: 135px;
     margin: 20px 0 0 0;
     font-size: 24px;
+    &:hover {
+      background-color: $hover_color;
+      cursor: pointer;
+    }
   }
 }
 
