--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -189,6 +189,7 @@ main {
     margin-bottom: 20px;
     border-radius: 10px;
     box-shadow: 3px 2px 10px;
+    cursor: pointer;
   }
 
   &__icon {
